# anofox-scenario

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  TELEMETRY.md  extension_config.cmake
.beads/: issues.jsonl
.beads/export-state/: 0b30d6723102c6b4.json
.github/workflows/: MainDistributionPipeline.yml  _extension_deploy.yml
docs/: API_REFERENCE.md
docs/features/: design.md  requirements.md
docs/spec/: architecture.md  diagnosis_and_redesign.md  error_handling.md  implementation_plan_master.md  implementation_plan_phase1.md  implementation_plan_phase2_4.md
scripts/: smoke_test.py
src/: anofox_scenario_extension.cpp  comparison_engine.cpp  ddl_blocker.cpp  delta_storage_engine.cpp  metadata_store.cpp  protocol_manager.cpp  scenario_manager.cpp  snapshot_manager.cpp
src/catalog/: scenario_catalog.cpp  scenario_delta.cpp  scenario_insert.cpp  scenario_merge_into.cpp  scenario_registry.cpp  scenario_scan.cpp  scenario_schema_entry.cpp  scenario_storage_extension.cpp  scenario_table_entry.cpp  scenario_transaction.cpp  scenario_update_delete.cpp
src/include/: anofox_scenario_extension.hpp  comparison_engine.hpp  ddl_blocker.hpp  delta_storage_engine.hpp  metadata_store.hpp  protocol_manager.hpp  scenario_manager.hpp  snapshot_manager.hpp
src/include/catalog/: scenario_catalog.hpp  scenario_delta.hpp  scenario_dml.hpp  scenario_registry.hpp  scenario_scan.hpp  scenario_storage_extension.hpp
src/include/lifecycle/: scenario_diff.hpp  scenario_lifecycle.hpp
src/lifecycle/: scenario_diff.cpp  scenario_lifecycle.cpp  scenario_merge.cpp  scenario_migrate.cpp
test/sql/: anofox_scenario_load.test  attach_basic.test  attach_concurrent.test  attach_constraints.test  attach_copy.test  attach_ddl.test  attach_freeze.test  attach_hardening.test  attach_isolation.test  attach_keyless_dml.test  attach_merge.test  attach_multischema.test  attach_perf.test  attach_persistence.test  attach_returning.test  attach_txn.test  attach_unsupported.test  attach_views.test  attach_write.test  scenario_comparison.test  scenario_concurrent.test  scenario_config.test  scenario_constraints.test  scenario_cross_base.test  scenario_declared_keys.test  scenario_diff_v2.test  scenario_ducklake_base.test  scenario_errors.test  scenario_integration.test  scenario_lifecycle.test  scenario_merge_back.test  scenario_merge_materialized.test  scenario_metadata.test  scenario_migrate.test  scenario_model_v2.test  scenario_no_pk.test  scenario_performance.test  scenario_portability.test  scenario_protocols.test  scenario_read.test  (+7 more)
